[package]
name = "env_toml_parser"
version = "0.1.1+upstream-1.1.2"
description = "TOML parser with Environment Variables."
categories = ["encoding", "parser-implementations", "parsing", "config"]
keywords = ["encoding", "toml", "env", "environment"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/IrwinJuice/env_toml/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[features]
default = ["std"]
alloc = []
std = ["alloc"]
simd = ["winnow/simd"]
unsafe = []

debug = ["std", "dep:anstream", "dep:anstyle"]

[dependencies]
anstream = { version = "1.0.0", optional = true }
anstyle = { version = "1.0.14", optional = true }
winnow = { version = "1.0.0", default-features = false }

[dev-dependencies]
anstream = { version = "1.0.0", features = ["test"] }
snapbox = "1.1.0"
toml_datetime = "1.1.1"

[lints]
workspace = true
